--- a/metatheory/plc-agda.cabal
+++ b/metatheory/plc-agda.cabal
@@ -20,6 +20,120 @@ executable plc-agda
         Raw
         Scoped
         Opts
+        MAlonzo.Code.Main
+        MAlonzo.Code.Agda.Builtin.Bool
+        MAlonzo.Code.Agda.Builtin.Char
+        MAlonzo.Code.Agda.Builtin.Equality
+        MAlonzo.Code.Agda.Builtin.IO
+        MAlonzo.Code.Agda.Builtin.Int
+        MAlonzo.Code.Agda.Builtin.List
+        MAlonzo.Code.Agda.Builtin.Nat
+        MAlonzo.Code.Agda.Builtin.Sigma
+        MAlonzo.Code.Agda.Builtin.String
+        MAlonzo.Code.Agda.Builtin.Unit
+        MAlonzo.Code.Agda.Primitive
+        MAlonzo.Code.Algebra
+        MAlonzo.Code.Algebra.FunctionProperties.Consequences
+        MAlonzo.Code.Algebra.Morphism
+        MAlonzo.Code.Algebra.Properties.BooleanAlgebra
+        MAlonzo.Code.Algebra.Properties.DistributiveLattice
+        MAlonzo.Code.Algebra.Properties.Lattice
+        MAlonzo.Code.Algebra.Properties.Semilattice
+        MAlonzo.Code.Algebra.Structures
+        MAlonzo.Code.Builtin
+        MAlonzo.Code.Builtin.Constant.Term
+        MAlonzo.Code.Builtin.Constant.Type
+        MAlonzo.Code.Builtin.Signature
+        MAlonzo.Code.Category.Applicative.Indexed
+        MAlonzo.Code.Category.Functor
+        MAlonzo.Code.Category.Monad.Indexed
+        MAlonzo.Code.Data.Bool.Base
+        MAlonzo.Code.Data.Bool.Properties
+        MAlonzo.Code.Data.Char.Properties
+        MAlonzo.Code.Data.Digit
+        MAlonzo.Code.Data.Empty
+        MAlonzo.Code.Data.Empty.Irrelevant
+        MAlonzo.Code.Data.Fin.Base
+        MAlonzo.Code.Data.Integer
+        MAlonzo.Code.Data.Integer.Base
+        MAlonzo.Code.Data.Integer.Properties
+        MAlonzo.Code.Data.List.Base
+        MAlonzo.Code.Data.List.NonEmpty
+        MAlonzo.Code.Data.List.Properties
+        MAlonzo.Code.Data.List.Relation.Binary.Lex.Core
+        MAlonzo.Code.Data.List.Relation.Binary.Lex.Strict
+        MAlonzo.Code.Data.List.Relation.Binary.Pointwise
+        MAlonzo.Code.Data.List.Relation.Unary.All
+        MAlonzo.Code.Data.List.Relation.Unary.Any
+        MAlonzo.Code.Data.Maybe.Base
+        MAlonzo.Code.Data.Nat.Base
+        MAlonzo.Code.Data.Nat.DivMod
+        MAlonzo.Code.Data.Nat.DivMod.Core
+        MAlonzo.Code.Data.Nat.Properties
+        MAlonzo.Code.Data.Nat.Show
+        MAlonzo.Code.Data.Product
+        MAlonzo.Code.Data.Sign
+        MAlonzo.Code.Data.String.Base
+        MAlonzo.Code.Data.String.Properties
+        MAlonzo.Code.Data.Sum.Base
+        MAlonzo.Code.Data.These
+        MAlonzo.Code.Data.Vec
+        MAlonzo.Code.Function.Bijection
+        MAlonzo.Code.Function.Equality
+        MAlonzo.Code.Function.Equivalence
+        MAlonzo.Code.Function.Injection
+        MAlonzo.Code.Function.Inverse
+        MAlonzo.Code.Function.LeftInverse
+        MAlonzo.Code.Function.Surjection
+        MAlonzo.Code.Induction
+        MAlonzo.Code.Induction.WellFounded
+        MAlonzo.Code.Level
+        MAlonzo.Code.Raw
+        MAlonzo.Code.Relation.Binary
+        MAlonzo.Code.Relation.Binary.Consequences
+        MAlonzo.Code.Relation.Binary.Construct.NaturalOrder.Left
+        MAlonzo.Code.Relation.Binary.Construct.NonStrictToStrict
+        MAlonzo.Code.Relation.Binary.Construct.On
+        MAlonzo.Code.Relation.Binary.Core
+        MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous
+        MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Construct.Trivial
+        MAlonzo.Code.Relation.Binary.Lattice
+        MAlonzo.Code.Relation.Binary.Properties.Poset
+        MAlonzo.Code.Relation.Binary.Properties.Preorder
+        MAlonzo.Code.Relation.Binary.PropositionalEquality
+        MAlonzo.Code.Relation.Binary.PropositionalEquality.Core
+        MAlonzo.Code.Relation.Binary.Reasoning.Base.Single
+        MAlonzo.Code.Relation.Binary.Reasoning.Base.Triple
+        MAlonzo.Code.Relation.Binary.Reasoning.Setoid
+        MAlonzo.Code.Relation.Nullary
+        MAlonzo.Code.Relation.Nullary.Decidable
+        MAlonzo.Code.Relation.Nullary.Negation
+        MAlonzo.Code.Relation.Nullary.Product
+        MAlonzo.Code.Relation.Nullary.Sum
+        MAlonzo.Code.Relation.Unary.Properties
+        MAlonzo.Code.Scoped
+        MAlonzo.Code.Scoped.Reduction
+        MAlonzo.Code.Scoped.RenamingSubstitution
+        MAlonzo.Code.Type
+        MAlonzo.Code.Utils
+        MAlonzo.RTE
+        MAlonzo.Code.Algorithmic
+        MAlonzo.Code.Algorithmic.CK
+        MAlonzo.Code.Check
+        MAlonzo.Code.Scoped.CK
+        MAlonzo.Code.Scoped.Extrication
+        MAlonzo.Code.Type.BetaNBE
+        MAlonzo.Code.Type.BetaNBE.Completeness
+        MAlonzo.Code.Type.BetaNBE.Soundness
+        MAlonzo.Code.Type.BetaNBE.Stability
+        MAlonzo.Code.Type.BetaNBE.RenamingSubstitution
+        MAlonzo.Code.Type.BetaNormal
+        MAlonzo.Code.Type.BetaNormal.Equality
+        MAlonzo.Code.Type.Equality
+        MAlonzo.Code.Type.RenamingSubstitution
+        MAlonzo.Code.Algorithmic.Reduction
+        MAlonzo.Code.Algorithmic.RenamingSubstitution
+        MAlonzo.Code.Algorithmic.Equality
   autogen-modules:
         MAlonzo.Code.Main
         MAlonzo.Code.Agda.Builtin.Bool
@@ -151,9 +265,123 @@ test-suite test-plc-agda
   type:    exitcode-stdio-1.0
   main-is: TestSimple.hs
   other-modules:
-	Raw
+        Raw
         Scoped
         Opts
+        MAlonzo.Code.Main
+        MAlonzo.Code.Agda.Builtin.Bool
+        MAlonzo.Code.Agda.Builtin.Char
+        MAlonzo.Code.Agda.Builtin.Equality
+        MAlonzo.Code.Agda.Builtin.IO
+        MAlonzo.Code.Agda.Builtin.Int
+        MAlonzo.Code.Agda.Builtin.List
+        MAlonzo.Code.Agda.Builtin.Nat
+        MAlonzo.Code.Agda.Builtin.Sigma
+        MAlonzo.Code.Agda.Builtin.String
+        MAlonzo.Code.Agda.Builtin.Unit
+        MAlonzo.Code.Agda.Primitive
+        MAlonzo.Code.Algebra
+        MAlonzo.Code.Algebra.FunctionProperties.Consequences
+        MAlonzo.Code.Algebra.Morphism
+        MAlonzo.Code.Algebra.Properties.BooleanAlgebra
+        MAlonzo.Code.Algebra.Properties.DistributiveLattice
+        MAlonzo.Code.Algebra.Properties.Lattice
+        MAlonzo.Code.Algebra.Properties.Semilattice
+        MAlonzo.Code.Algebra.Structures
+        MAlonzo.Code.Builtin
+        MAlonzo.Code.Builtin.Constant.Term
+        MAlonzo.Code.Builtin.Constant.Type
+        MAlonzo.Code.Builtin.Signature
+        MAlonzo.Code.Category.Applicative.Indexed
+        MAlonzo.Code.Category.Functor
+        MAlonzo.Code.Category.Monad.Indexed
+        MAlonzo.Code.Data.Bool.Base
+        MAlonzo.Code.Data.Bool.Properties
+        MAlonzo.Code.Data.Char.Properties
+        MAlonzo.Code.Data.Digit
+        MAlonzo.Code.Data.Empty
+        MAlonzo.Code.Data.Empty.Irrelevant
+        MAlonzo.Code.Data.Fin.Base
+        MAlonzo.Code.Data.Integer
+        MAlonzo.Code.Data.Integer.Base
+        MAlonzo.Code.Data.Integer.Properties
+        MAlonzo.Code.Data.List.Base
+        MAlonzo.Code.Data.List.NonEmpty
+        MAlonzo.Code.Data.List.Properties
+        MAlonzo.Code.Data.List.Relation.Binary.Lex.Core
+        MAlonzo.Code.Data.List.Relation.Binary.Lex.Strict
+        MAlonzo.Code.Data.List.Relation.Binary.Pointwise
+        MAlonzo.Code.Data.List.Relation.Unary.All
+        MAlonzo.Code.Data.List.Relation.Unary.Any
+        MAlonzo.Code.Data.Maybe.Base
+        MAlonzo.Code.Data.Nat.Base
+        MAlonzo.Code.Data.Nat.DivMod
+        MAlonzo.Code.Data.Nat.DivMod.Core
+        MAlonzo.Code.Data.Nat.Properties
+        MAlonzo.Code.Data.Nat.Show
+        MAlonzo.Code.Data.Product
+        MAlonzo.Code.Data.Sign
+        MAlonzo.Code.Data.String.Base
+        MAlonzo.Code.Data.String.Properties
+        MAlonzo.Code.Data.Sum.Base
+        MAlonzo.Code.Data.These
+        MAlonzo.Code.Data.Vec
+        MAlonzo.Code.Function.Bijection
+        MAlonzo.Code.Function.Equality
+        MAlonzo.Code.Function.Equivalence
+        MAlonzo.Code.Function.Injection
+        MAlonzo.Code.Function.Inverse
+        MAlonzo.Code.Function.LeftInverse
+        MAlonzo.Code.Function.Surjection
+        MAlonzo.Code.Induction
+        MAlonzo.Code.Induction.WellFounded
+        MAlonzo.Code.Level
+        MAlonzo.Code.Raw
+        MAlonzo.Code.Relation.Binary
+        MAlonzo.Code.Relation.Binary.Consequences
+        MAlonzo.Code.Relation.Binary.Construct.NaturalOrder.Left
+        MAlonzo.Code.Relation.Binary.Construct.NonStrictToStrict
+        MAlonzo.Code.Relation.Binary.Construct.On
+        MAlonzo.Code.Relation.Binary.Core
+        MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous
+        MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Construct.Trivial
+        MAlonzo.Code.Relation.Binary.Lattice
+        MAlonzo.Code.Relation.Binary.Properties.Poset
+        MAlonzo.Code.Relation.Binary.Properties.Preorder
+        MAlonzo.Code.Relation.Binary.PropositionalEquality
+        MAlonzo.Code.Relation.Binary.PropositionalEquality.Core
+        MAlonzo.Code.Relation.Binary.Reasoning.Base.Single
+        MAlonzo.Code.Relation.Binary.Reasoning.Base.Triple
+        MAlonzo.Code.Relation.Binary.Reasoning.Setoid
+        MAlonzo.Code.Relation.Nullary
+        MAlonzo.Code.Relation.Nullary.Decidable
+        MAlonzo.Code.Relation.Nullary.Negation
+        MAlonzo.Code.Relation.Nullary.Product
+        MAlonzo.Code.Relation.Nullary.Sum
+        MAlonzo.Code.Relation.Unary.Properties
+        MAlonzo.Code.Scoped
+        MAlonzo.Code.Scoped.Reduction
+        MAlonzo.Code.Scoped.RenamingSubstitution
+        MAlonzo.Code.Type
+        MAlonzo.Code.Utils
+        MAlonzo.RTE
+        MAlonzo.Code.Algorithmic
+        MAlonzo.Code.Algorithmic.CK
+        MAlonzo.Code.Check
+        MAlonzo.Code.Scoped.CK
+        MAlonzo.Code.Scoped.Extrication
+        MAlonzo.Code.Type.BetaNBE
+        MAlonzo.Code.Type.BetaNBE.Completeness
+        MAlonzo.Code.Type.BetaNBE.Soundness
+        MAlonzo.Code.Type.BetaNBE.Stability
+        MAlonzo.Code.Type.BetaNBE.RenamingSubstitution
+        MAlonzo.Code.Type.BetaNormal
+        MAlonzo.Code.Type.BetaNormal.Equality
+        MAlonzo.Code.Type.Equality
+        MAlonzo.Code.Type.RenamingSubstitution
+        MAlonzo.Code.Algorithmic.Reduction
+        MAlonzo.Code.Algorithmic.RenamingSubstitution
+        MAlonzo.Code.Algorithmic.Equality
   autogen-modules:
         MAlonzo.Code.Agda.Builtin.Bool
         MAlonzo.Code.Agda.Builtin.Char
@@ -282,23 +510,137 @@ test-suite test-plc-agda
 
 
 test-suite test2-plc-agda
-    type: detailed-0.9
-    test-module: TestDetailed
-    build-depends: base -any,
-                   Cabal -any,
-                   process -any,
-                   bytestring -any,
-                   text -any,
-                   ieee754 -any,
-                   cryptonite -any,
-                   memory -any,
-                   optparse-applicative -any,
-                   language-plutus-core -any,
-                   directory -any
+  type: detailed-0.9
+  test-module: TestDetailed
+  build-depends: base -any,
+                 Cabal -any,
+                 process -any,
+                 bytestring -any,
+                 text -any,
+                 ieee754 -any,
+                 cryptonite -any,
+                 memory -any,
+                 optparse-applicative -any,
+                 language-plutus-core -any,
+                 directory -any
   other-modules:
-	Raw
+        Raw
         Scoped
         Opts
+        MAlonzo.Code.Main
+        MAlonzo.Code.Agda.Builtin.Bool
+        MAlonzo.Code.Agda.Builtin.Char
+        MAlonzo.Code.Agda.Builtin.Equality
+        MAlonzo.Code.Agda.Builtin.IO
+        MAlonzo.Code.Agda.Builtin.Int
+        MAlonzo.Code.Agda.Builtin.List
+        MAlonzo.Code.Agda.Builtin.Nat
+        MAlonzo.Code.Agda.Builtin.Sigma
+        MAlonzo.Code.Agda.Builtin.String
+        MAlonzo.Code.Agda.Builtin.Unit
+        MAlonzo.Code.Agda.Primitive
+        MAlonzo.Code.Algebra
+        MAlonzo.Code.Algebra.FunctionProperties.Consequences
+        MAlonzo.Code.Algebra.Morphism
+        MAlonzo.Code.Algebra.Properties.BooleanAlgebra
+        MAlonzo.Code.Algebra.Properties.DistributiveLattice
+        MAlonzo.Code.Algebra.Properties.Lattice
+        MAlonzo.Code.Algebra.Properties.Semilattice
+        MAlonzo.Code.Algebra.Structures
+        MAlonzo.Code.Builtin
+        MAlonzo.Code.Builtin.Constant.Term
+        MAlonzo.Code.Builtin.Constant.Type
+        MAlonzo.Code.Builtin.Signature
+        MAlonzo.Code.Category.Applicative.Indexed
+        MAlonzo.Code.Category.Functor
+        MAlonzo.Code.Category.Monad.Indexed
+        MAlonzo.Code.Data.Bool.Base
+        MAlonzo.Code.Data.Bool.Properties
+        MAlonzo.Code.Data.Char.Properties
+        MAlonzo.Code.Data.Digit
+        MAlonzo.Code.Data.Empty
+        MAlonzo.Code.Data.Empty.Irrelevant
+        MAlonzo.Code.Data.Fin.Base
+        MAlonzo.Code.Data.Integer
+        MAlonzo.Code.Data.Integer.Base
+        MAlonzo.Code.Data.Integer.Properties
+        MAlonzo.Code.Data.List.Base
+        MAlonzo.Code.Data.List.NonEmpty
+        MAlonzo.Code.Data.List.Properties
+        MAlonzo.Code.Data.List.Relation.Binary.Lex.Core
+        MAlonzo.Code.Data.List.Relation.Binary.Lex.Strict
+        MAlonzo.Code.Data.List.Relation.Binary.Pointwise
+        MAlonzo.Code.Data.List.Relation.Unary.All
+        MAlonzo.Code.Data.List.Relation.Unary.Any
+        MAlonzo.Code.Data.Maybe.Base
+        MAlonzo.Code.Data.Nat.Base
+        MAlonzo.Code.Data.Nat.DivMod
+        MAlonzo.Code.Data.Nat.DivMod.Core
+        MAlonzo.Code.Data.Nat.Properties
+        MAlonzo.Code.Data.Nat.Show
+        MAlonzo.Code.Data.Product
+        MAlonzo.Code.Data.Sign
+        MAlonzo.Code.Data.String.Base
+        MAlonzo.Code.Data.String.Properties
+        MAlonzo.Code.Data.Sum.Base
+        MAlonzo.Code.Data.These
+        MAlonzo.Code.Data.Vec
+        MAlonzo.Code.Function.Bijection
+        MAlonzo.Code.Function.Equality
+        MAlonzo.Code.Function.Equivalence
+        MAlonzo.Code.Function.Injection
+        MAlonzo.Code.Function.Inverse
+        MAlonzo.Code.Function.LeftInverse
+        MAlonzo.Code.Function.Surjection
+        MAlonzo.Code.Induction
+        MAlonzo.Code.Induction.WellFounded
+        MAlonzo.Code.Level
+        MAlonzo.Code.Raw
+        MAlonzo.Code.Relation.Binary
+        MAlonzo.Code.Relation.Binary.Consequences
+        MAlonzo.Code.Relation.Binary.Construct.NaturalOrder.Left
+        MAlonzo.Code.Relation.Binary.Construct.NonStrictToStrict
+        MAlonzo.Code.Relation.Binary.Construct.On
+        MAlonzo.Code.Relation.Binary.Core
+        MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous
+        MAlonzo.Code.Relation.Binary.Indexed.Heterogeneous.Construct.Trivial
+        MAlonzo.Code.Relation.Binary.Lattice
+        MAlonzo.Code.Relation.Binary.Properties.Poset
+        MAlonzo.Code.Relation.Binary.Properties.Preorder
+        MAlonzo.Code.Relation.Binary.PropositionalEquality
+        MAlonzo.Code.Relation.Binary.PropositionalEquality.Core
+        MAlonzo.Code.Relation.Binary.Reasoning.Base.Single
+        MAlonzo.Code.Relation.Binary.Reasoning.Base.Triple
+        MAlonzo.Code.Relation.Binary.Reasoning.Setoid
+        MAlonzo.Code.Relation.Nullary
+        MAlonzo.Code.Relation.Nullary.Decidable
+        MAlonzo.Code.Relation.Nullary.Negation
+        MAlonzo.Code.Relation.Nullary.Product
+        MAlonzo.Code.Relation.Nullary.Sum
+        MAlonzo.Code.Relation.Unary.Properties
+        MAlonzo.Code.Scoped
+        MAlonzo.Code.Scoped.Reduction
+        MAlonzo.Code.Scoped.RenamingSubstitution
+        MAlonzo.Code.Type
+        MAlonzo.Code.Utils
+        MAlonzo.RTE
+        MAlonzo.Code.Algorithmic
+        MAlonzo.Code.Algorithmic.CK
+        MAlonzo.Code.Check
+        MAlonzo.Code.Scoped.CK
+        MAlonzo.Code.Scoped.Extrication
+        MAlonzo.Code.Type.BetaNBE
+        MAlonzo.Code.Type.BetaNBE.Completeness
+        MAlonzo.Code.Type.BetaNBE.Soundness
+        MAlonzo.Code.Type.BetaNBE.Stability
+        MAlonzo.Code.Type.BetaNBE.RenamingSubstitution
+        MAlonzo.Code.Type.BetaNormal
+        MAlonzo.Code.Type.BetaNormal.Equality
+        MAlonzo.Code.Type.Equality
+        MAlonzo.Code.Type.RenamingSubstitution
+        MAlonzo.Code.Algorithmic.Reduction
+        MAlonzo.Code.Algorithmic.RenamingSubstitution
+        MAlonzo.Code.Algorithmic.Equality
   autogen-modules:
         MAlonzo.Code.Agda.Builtin.Bool
         MAlonzo.Code.Agda.Builtin.Char
@@ -414,4 +756,5 @@ test-suite test2-plc-agda
         MAlonzo.Code.Type.RenamingSubstitution
         MAlonzo.Code.Utils
         MAlonzo.RTE
-    build-tool-depends: plutus-exe:plc
+  build-tool-depends: plutus-exe:plc
+  
