--- a/plutus-emulator/plutus-emulator.cabal
+++ b/plutus-emulator/plutus-emulator.cabal
@@ -39,10 +39,14 @@ library
         Wallet.Emulator
         Wallet.Emulator.Types
         Wallet.Emulator.Generators
+        Wallet.Emulator.Chain
         Wallet.Emulator.NodeClient
+        Wallet.Emulator.MultiAgent
+        Wallet.Emulator.Wallet
         Wallet.Rollup
         Wallet.Rollup.Types
         Wallet.Rollup.Render
+        Control.Monad.Freer.Extras
     hs-source-dirs: src
     default-language: Haskell2010
     build-depends:
@@ -82,6 +86,7 @@ library
         newtype-generics,
         http-api-data,
         playground-common,
+        freer-simple -any,
         cardano-crypto
 
 test-suite plutus-emulator-test
@@ -103,4 +108,5 @@ test-suite plutus-emulator-test
         transformers -any,
         lens -any,
         bytestring -any,
+        freer-simple -any,
         aeson -any
