--- a/plutus-contract/plutus-contract.cabal
+++ b/plutus-contract/plutus-contract.cabal
@@ -39,6 +39,7 @@ library
         Language.Plutus.Contract
         Language.Plutus.Contract.App
         Language.Plutus.Contract.Effects.AwaitSlot
+        Language.Plutus.Contract.Effects.AwaitTxConfirmed
         Language.Plutus.Contract.Effects.ExposeEndpoint
         Language.Plutus.Contract.Effects.OwnPubKey
         Language.Plutus.Contract.Effects.UtxoAt
