--- a/language-plutus-core/language-plutus-core.cabal
+++ b/language-plutus-core/language-plutus-core.cabal
@@ -37,13 +37,13 @@ library
         Language.PlutusCore.Rename.Internal
         Language.PlutusCore.Rename.Monad
         Language.PlutusCore.Rename
-        Language.PlutusCore.Instance.Eq.Internal
         Language.PlutusCore.Normalize
         Language.PlutusCore.Normalize.Internal
         Language.PlutusCore.Pretty
         Language.PlutusCore.View
         Language.PlutusCore.Subst
         Language.PlutusCore.Name
+        Language.PlutusCore.Core
         Language.PlutusCore.DeBruijn
         Language.PlutusCore.Check.Uniques
         Language.PlutusCore.FsTree
@@ -76,8 +76,18 @@ library
     build-tool-depends: alex:alex -any, happy:happy >=1.17.1
     hs-source-dirs: src prelude stdlib examples generators common
     other-modules:
-        Language.PlutusCore.Type
-        Language.PlutusCore.Lexer.Type
+        Language.PlutusCore.Pretty.ConfigName
+        Language.PlutusCore.Core.Type
+        Language.PlutusCore.Core.Plated
+        Language.PlutusCore.Core.Instance.Eq
+        Language.PlutusCore.Core.Instance.Pretty.Classic
+        Language.PlutusCore.Core.Instance.Pretty.Common
+        Language.PlutusCore.Core.Instance.Pretty.Default
+        Language.PlutusCore.Core.Instance.Pretty.Plc
+        Language.PlutusCore.Core.Instance.Pretty.Readable
+        Language.PlutusCore.Core.Instance.Pretty
+        Language.PlutusCore.Core.Instance.Recursive
+        Language.PlutusCore.Core.Instance
         Language.PlutusCore.Constant.Apply
         Language.PlutusCore.Constant.Dynamic.BuiltinName
         Language.PlutusCore.Constant.Dynamic.Call
@@ -89,10 +99,15 @@ library
         Language.PlutusCore.Constant.Make
         Language.PlutusCore.Constant.Name
         Language.PlutusCore.Constant.Typed
-        Language.PlutusCore.Instance.Eq
+        Language.PlutusCore.Lexer.Type
+        Language.PlutusCore.Eq
+        Language.PlutusCore.Mark
         Language.PlutusCore.Pretty.Classic
+        Language.PlutusCore.Pretty.ConfigName
+        Language.PlutusCore.Pretty.Default
         Language.PlutusCore.Pretty.Plc
         Language.PlutusCore.Pretty.Readable
+        Language.PlutusCore.Pretty.Utils
         Language.PlutusCore.Error
         Language.PlutusCore.Size
         Language.PlutusCore.TypeCheck.Internal
